--- a/src/components/logo/logo.css
+++ b/src/components/logo/logo.css
@@ -52,13 +52,13 @@
 }
 
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     .logo-image{
-        width: 30px;
-        height: 30px;
+        width: 60px;
+        height: 60px;
     }
     
     .nome-mark{
-        font-size: .5rem;
+        font-size: 1rem;
     }
 }
