--- a/src/components/search/searchbar.css
+++ b/src/components/search/searchbar.css
@@ -1,5 +1,5 @@
 .search-bar {
-    margin: 1rem 0 0 2rem;
+    margin: 1rem 0 1rem 2rem;
     padding-left: 1rem;
     display: flex;
     justify-content: start;
@@ -20,4 +20,11 @@
     padding: 1rem;
     width: 100%;
     outline: none;
+}
+
+@media (max-width: 600px) {
+    .search-bar {
+        margin: 1rem 0 1rem 2rem;
+        width: 90%;
+    }
 }
