--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 }
 
 body {
-    padding: 1rem;
+    padding: 1rem 1rem 0 1rem;
     font-family: var(--font-dm-sans) !important;
     color: var(--text-base-light);
     background-color: var(--bg-icon);
