--- a/src/components/product/productCard.css
+++ b/src/components/product/productCard.css
@@ -1,4 +1,5 @@
 .product-card {
+    position: relative;
     margin: 1rem 0 0 3rem;
     display: grid;
     align-items: center;
@@ -31,6 +32,19 @@
     border-radius: 12px 12px 0 0;
 }
 
+.promotion-banner {
+    position: absolute;
+    top: 25px;
+    left: 0;
+    background: var(--text-destac);
+    color: var(--text-base-light);
+    padding: 4px 15px;
+    font-size: 1rem;
+    font-weight: 700;
+    transform: rotate(-30deg);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
 .product-name {
     text-align: center;
     font-size: 1.3rem;
@@ -57,14 +71,14 @@
     color: var(--text-sub);
 }
 
-.whatsapp-icon{
+.whatsapp-icon {
     margin-left: 0.5rem;
     width: 1.3rem;
     height: 1.3rem;
     color: var(--bg-icon-whatsapp)
 }
 
-.whatsapp-icon:hover{
+.whatsapp-icon:hover {
     color: var(--text-destac)
 }
 
@@ -72,30 +86,30 @@
     .product-card {
         margin: 1rem 0 0 3rem;
     }
-    
+
     .product-info {
         font-size: 1rem;
     }
-    
+
     .img-product {
         width: 100%;
         max-height: 250px;
     }
-    
+
     .product-name {
         font-size: 1.3rem;
         margin-bottom: .5rem;
     }
-    
+
     .product-price {
         font-size: 1.3rem;
     }
-    
+
     .product-sale {
         font-size: .6rem;
     }
-    
-    .whatsapp-icon{
+
+    .whatsapp-icon {
         margin-left: 0.5rem;
         width: 1rem;
         height: 1rem;
@@ -107,30 +121,30 @@
     .product-card {
         margin: 1rem 0 0 3rem;
     }
-    
+
     .product-info {
         font-size: 1rem;
     }
-    
+
     .img-product {
         width: 100%;
         max-height: 250px;
     }
-    
+
     .product-name {
         font-size: 1rem;
         margin-bottom: .5rem;
     }
-    
+
     .product-price {
         font-size: 1rem;
     }
-    
+
     .product-sale {
         font-size: .5rem;
     }
-    
-    .whatsapp-icon{
+
+    .whatsapp-icon {
         margin-left: 0.5rem;
         width: 1rem;
         height: 1rem;
