--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -56,6 +56,7 @@
 
 .category-item input[type="checkbox"]:checked::after {
     content: "✔";
+    padding: 4px;
     color: var(--text-base-light);
     font-size: 12px;
     text-align: center;
