--- a/src/components/product/productCard.css
+++ b/src/components/product/productCard.css
@@ -27,8 +27,9 @@
 }
 
 .img-product {
+    margin-top: 0;
     width: 100%;
-    max-height: 240px;
+    height: 100%;
     border-radius: 12px 12px 0 0;
 }
 
@@ -36,13 +37,38 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: var(--text-destac);
+    background: var(--bg-promotion);
     color: var(--text-base-light);
     border-radius: 12px 0 12px 0;
     padding: .3rem .7rem;
     font-size: 1rem;
     font-weight: 700;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+
+}
+
+.clothing-banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: var(--text-destac);
+    color: var(--text-base-light);
+    border-radius: 0 12px 0 12px;
+    padding: .3rem .7rem;
+    font-size: .9em;
+    font-weight: 700;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    line-height: normal;
+    padding: .5em;
+}
+
+
+.clothing-banner span {
+    white-space: nowrap;
 }
 
 .product-name {
@@ -118,17 +144,8 @@
 
 
 @media (max-width: 970px) {
-    .product-card {
-        margin: 1rem 0 0 3rem;
-    }
-
     .product-info {
         font-size: 1rem;
-    }
-
-    .img-product {
-        width: 100%;
-        max-height: 250px;
     }
 
     .product-name {
@@ -156,6 +173,16 @@
         padding: .3rem .6rem;
         font-size: .9rem;
     }
+
+    .img-product {
+        width: 100%;
+        max-height: 200px;
+    }
+
+    .clothing-banner {
+        font-size: .7em;
+    }
+
 }
 
 @media (max-width: 350px) {
