--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body {
     align-items: center;
     color: var(--text-base-light);
     font-weight: 500;
-    margin: 1rem 0 0 0;
+    margin-top: 2em;
 }
 
 .social-icon-app {
