--- a/src/components/product/productCard.css
+++ b/src/components/product/productCard.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    min-height: 100%; 
+    min-height: 100%;
     border-radius: 12px;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
@@ -17,7 +17,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
-    min-height: 100%; 
+    min-height: 100%;
     margin-bottom: .5rem;
 }
 
@@ -34,24 +34,25 @@
     border-radius: 12px 12px 0 0;
 }
 
-.img-product-icon{
-    padding: 0!important;
-    position: relative!important;
+.img-product-icon {
+    padding: 0 !important;
+    position: relative !important;
 }
 
-.btn-dialog{
-    background-color: var(--text-destac)!important;
-    margin: 0!important;
+.btn-dialog {
+    background-color: var(--text-destac) !important;
+    margin: 0 5px 5px 0 !important;
 }
 
-.dialog-full{
-    background-color: var(--bg-icon)!important;
-    opacity: 1!important;
+.dialog-full {
+    background-color: var(--bg-icon) !important;
+    opacity: 1 !important;
+    padding: 0 !important;
 }
 
-.img-product-dialog{
-    padding: 0!important;
-    margin: 0!important;
+.img-product-dialog {
+    padding: 0 !important;
+    margin: 0 !important;
 }
 
 .promotion-banner {
@@ -65,7 +66,6 @@
     font-size: 1rem;
     font-weight: 700;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-
 }
 
 .clothing-banner {
@@ -87,12 +87,44 @@
     padding: .5em;
 }
 
-
 .clothing-banner span {
     white-space: nowrap;
 }
 
-.promotion-banner, .clothing-banner {
+.product-size {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -1;
+    right: 0;
+    background: var(--text-destac);
+    color: var(--text-base-light);
+    border-radius: 0 0 0 12px;
+    padding: .3rem .7rem;
+    font-size: 1.3em;
+    font-weight: 700;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    line-height: normal;
+    padding: .5em;
+}
+
+.promotion-banner-dialog {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: var(--bg-promotion);
+    color: var(--text-base-light);
+    border-radius: 0 0px 12px 0px;
+    padding: .3rem .7rem;
+    font-size: 1.3rem;
+    font-weight: 700;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.promotion-banner,
+.clothing-banner {
     z-index: 2;
 }
 
@@ -107,6 +139,13 @@
 .product-price {
     text-align: center;
     font-size: 1.3rem;
+    font-weight: 700;
+    color: var(--text-destac);
+}
+
+.product-price-dialog{
+    text-align: center;
+    font-size: 2rem;
     font-weight: 700;
     color: var(--text-destac);
 }
