--- a/src/components/logo/logo.css
+++ b/src/components/logo/logo.css
@@ -1,4 +1,4 @@
-.logo-view{
+.logo-view {
     margin: 0;
     display: flex;
     flex-direction: row;
@@ -6,53 +6,95 @@
     justify-content: center;
 }
 
-.logo-image{
+.logo-image {
     width: 100px;
     height: auto;
     margin: 0;
     display: block;
 }
 
-.nome-mark{
+.nome-mark {
     margin-left: 1rem;
     font-size: 1.5rem;
     font-weight: 700;
     color: var(--text-base-light);
 }
 
+.nome-mark__text {
+    display: inline-block;
+}
+
+.nome-mark__lastword {
+    position: relative;
+    display: inline-block;
+    padding-right: 0.4rem;
+}
+
+.nome-mark__hat {
+    position: absolute;
+    top: -1.3rem;
+    left: 50%;
+    width: 3rem;
+    height: auto;
+    transform: translateX(-10%) rotate(3deg);
+    transform-origin: center;
+    pointer-events: none;
+    user-select: none;
+}
+
 @media (max-width: 970px) {
-    .nome-mark{
+    .nome-mark {
         font-size: 1.2rem;
+    }
+
+    .nome-mark__hat {
+        top: -1.25rem;
+        width: 2.4rem;
     }
 }
 
 @media (max-width: 820px) {
-    .logo-image{
+    .logo-image {
         width: 90px;
     }
-    
-    .nome-mark{
+
+    .nome-mark {
         font-size: 1rem;
+    }
+
+    .nome-mark__hat {
+        top: -1rem;
+        width: 2rem;
     }
 }
 
 @media (max-width: 630px) {
-    .logo-image{
+    .logo-image {
         width: 90px;
     }
-    
-    .nome-mark{
+
+    .nome-mark {
         font-size: 1rem;
+    }
+
+    .nome-mark__hat {
+        top: -0.85rem;
+        width: 1.8rem;
     }
 }
 
 
 @media (max-width: 600px) {
-    .logo-image{
+    .logo-image {
         width: 90px;
     }
-    
-    .nome-mark{
+
+    .nome-mark {
         font-size: 1rem;
+    }
+
+    .nome-mark__hat {
+        top: -0.75rem;
+        width: 1.6rem;
     }
 }
