--- a/src/index.css
+++ b/src/index.css
@@ -108,10 +108,58 @@ body {
     overflow: hidden;
 }
 
-.sleigh-runner {
+.sleigh-runner-1 {
     position: fixed;
     bottom: -0.5vh;
     right: -30vw;
+    width: clamp(180px, 24vw, 220px);
+    height: clamp(110px, 15vw, 100px);
+    background-image: url("../public/assets/farra-capivara.gif");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    pointer-events: none;
+    z-index: 5;
+    opacity: 0;
+    animation: sleigh-glide 20s linear infinite;
+}
+
+.sleigh-runner-2 {
+    position: fixed;
+    bottom: -0.5vh;
+    right: -27vw;
+    width: clamp(180px, 24vw, 220px);
+    height: clamp(110px, 15vw, 100px);
+    background-image: url("../public/assets/tito-bita.gif");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    pointer-events: none;
+    z-index: 5;
+    opacity: 0;
+    animation: sleigh-glide 20s linear infinite;
+}
+
+.sleigh-runner-3 {
+    position: fixed;
+    bottom: -0.5vh;
+    right: -24vw;
+    width: clamp(180px, 24vw, 220px);
+    height: clamp(110px, 15vw, 100px);
+    background-image: url("../public/assets/bita-escola.gif");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    pointer-events: none;
+    z-index: 5;
+    opacity: 0;
+    animation: sleigh-glide 20s linear infinite;
+}
+
+.sleigh-runner-4 {
+    position: fixed;
+    bottom: -0.5vh;
+    right: -21vw;
     width: clamp(180px, 24vw, 220px);
     height: clamp(110px, 15vw, 100px);
     background-image: url("../public/assets/bita-mundo.gif");
